--- a/src/components/characterview/characterview.css
+++ b/src/components/characterview/characterview.css
@@ -4,6 +4,7 @@
 	background-color: #4F4E56;
 	flex-direction: column;
 	height: auto;
+	min-height: 884px;
 	width: 100%;
 	padding: 10px;
 	border-radius: 1em;
@@ -26,4 +27,7 @@ border-bottom: 1px solid black;
 display: flex;
 margin: 5px;
 flex-direction: column;
+}
+.raid{
+width: 50%;
 }
