--- a/src/components/playerraidprogress/playerraidprogress.css
+++ b/src/components/playerraidprogress/playerraidprogress.css
@@ -1,5 +1,7 @@
 .raidwrapper{
 	background-color: black;
+	height: 25%;
+	width: 100%;
 	padding: 10px;
 	display: flex;
 	flex-direction: column;
@@ -14,10 +16,14 @@
 }
 .difficultywrapper{
 	width: 100%;
+	height: 100%;
 	display: flex;
 	justify-content: space-evenly;
 }
 .difficulty{
+	background-color: black;
 	display: flex;
 	flex-direction: column;
+	height: 100%;
+	width: 100%;
 }
