--- a/src/components/characterview/characterview.css
+++ b/src/components/characterview/characterview.css
@@ -11,6 +11,7 @@
 }
 .content{
 	display: flex;
+	width: 100%;
 
 	justify-content: space-between;
 
@@ -30,4 +31,7 @@ flex-direction: column;
 }
 .raid{
 width: 50%;
+}
+.mythicplus{
+width: 40%;
 }
