--- a/src/components/characterview/characterview.css
+++ b/src/components/characterview/characterview.css
@@ -3,7 +3,6 @@
 	background-color: #4F4E56;
 	flex-direction: column;
 	height: auto;
-	min-height: 884px;
 	width: 100%;
 	padding: 10px;
 	border-radius: 1em;
@@ -13,7 +12,6 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	justify-content: space-evenly;
 }
 
 p{
@@ -29,15 +27,18 @@ p{
 	margin: 5px;
 	flex-direction: column;
 }
+.balls{
+display: flex;
+}
 
 .raid{
-	width: 40%;
+	width: 50%;
 }
 
 .mythicplus{
-	width: 40%;
+	width: 50%;
 }
 
 .arena{
-	width: 40%;
+	width: 50%;
 }
