--- a/src/components/mythicrun/mythicrun.css
+++ b/src/components/mythicrun/mythicrun.css
@@ -10,7 +10,6 @@
 	display: flex;
 	flex-direction: column;
 	height: auto;
-	width: 100%;
 	background-color: black;
 	margin-bottom: 5px;
 	padding: 5px;
@@ -37,3 +36,7 @@
 	justify-self: center;
 }
 
+.headwrap{
+display: flex;
+justify-content: space-between;
+}
