--- a/src/components/affixes/weeklyaffix/weeklyaffix.css
+++ b/src/components/affixes/weeklyaffix/weeklyaffix.css
@@ -2,10 +2,12 @@
 	display: flex;
 	flex-direction: row;
 }
+
 .itemWrapper{
 	display: flex;
 	flex-direction: column;
-	width:33%; 
+	width:33%;
+	height: 100%;
 	border-top: 1px solid white;
 }
 
@@ -16,10 +18,24 @@
 
 .description-box{
 	border-top: 1px solid white;
+	overflow: scroll;
 	height: 100px;
 }
 
 .butt{
 	display: flex;
 	flex-direction: row;
+}
+
+
+@media screen and (max-width: 480px){
+	.weeklywrapper{
+		display: flex;
+		flex-direction: column;
+		width: 100vw;
+	}
+	
+	.itemWrapper{
+		width: 100%;
+	}
 }
