--- a/src/components/characterview/namespace/namespace.css
+++ b/src/components/characterview/namespace/namespace.css
@@ -8,3 +8,13 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
+@media screen and (max-width: 480px){
+	.textwrapper{
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+	}
+
+}
