--- a/src/components/playerraidprogress/playerraidprogress.css
+++ b/src/components/playerraidprogress/playerraidprogress.css
@@ -30,3 +30,16 @@
 	height: 80%;
 	width: 80%;
 }
+
+@media screen and (max-width: 480px){
+
+	.difficulty{
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	.difficultywrapper{
+		flex-direction: column;
+		align-items: center;
+	}
+}
