--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -5,6 +5,7 @@
 	align-items: center;
 	flex-direction: column;
 }
+
 .quicklinks{
 	display: flex;
 	flex-direction: column;
@@ -19,3 +20,9 @@
 	width: 100%;
 	text-align: center;
 }
+
+.guildname{
+	font-weight: bold;
+	font-size: xx-large;
+}
+
