changed the size for mobile design

--- a/src/components/mythicrun/mythicrun.css
+++ b/src/components/mythicrun/mythicrun.css
@@ -40,8 +40,14 @@
 	display: flex;
 	justify-content: space-between;
 }
+.ratingfield{
+	width: 15%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 500px){
 	.headwrap{
 		flex-direction: column;
 		align-items: center;
