--- a/src/components/pvp/pvpsummary/pvpsummary.css
+++ b/src/components/pvp/pvpsummary/pvpsummary.css
@@ -16,3 +16,11 @@
 	flex-direction: column;
 	justify-content: space-between;
 }
+
+
+@media screen and (max-width: 500px){
+	.bracketwrapper{
+		font-size: medium;
+	}
+
+}
