--- a/src/components/characterview/characterview.css
+++ b/src/components/characterview/characterview.css
@@ -44,6 +44,12 @@ p{
 	width: 100%;
 }
 
+.player-tab-container{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	background-color: #016392;
+}
 
 @media screen and (max-width: 500px){
 	.characterWrap{
