--- a/src/components/characterview/namespace/namespace.css
+++ b/src/components/characterview/namespace/namespace.css
@@ -6,11 +6,14 @@
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-start;
+	font-size: 20px;
+	
 }
 .namespace-container{
 	display: flex;
 	flex-direction: row;
+	width: 100%;
 }
 
 @media screen and (max-width: 500px){
