--- a/src/components/mythicrun/mythicrun.css
+++ b/src/components/mythicrun/mythicrun.css
@@ -34,10 +34,13 @@
 	font-size: 25px;
 }
 .ratingfield{
-	width: 15%;
+	width: 25%;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	flex-direction: column;
+}
+
+.vault-stats{
+	width: 40%;
 }
 
 @media screen and (max-width: 500px){
