--- a/src/components/mythicrun/vaultstats/vaultstats.css
+++ b/src/components/mythicrun/vaultstats/vaultstats.css
@@ -1,8 +1,17 @@
 .vaultwrapper{
 	display: flex;
-	justify-content: space-around;
+	gap: 20px;
 	flex-direction: row;
-	width: 35%;
+	width: 100%;
 	margin: 10px;
+}
+
+.no-reward-wrapper{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 5px;
+	border: 1px solid grey;
+	box-shadow: 0px 0px 5px 3px grey;
 }
 
