--- a/src/components/mythicrun/vaultstats/vaultstats.css
+++ b/src/components/mythicrun/vaultstats/vaultstats.css
@@ -2,6 +2,7 @@
 	display: flex;
 	gap: 20px;
 	flex-direction: row;
+	gap: 20px;
 	width: 100%;
 	margin: 10px;
 }
@@ -15,3 +16,8 @@
 	box-shadow: 0px 0px 5px 3px grey;
 }
 
+@media screen and (max-width: 500px){
+	.vaultwrapper{
+		margin: 0px;
+	}
+}
