--- a/src/components/mythicrun/vaultstats/vaultstats.css
+++ b/src/components/mythicrun/vaultstats/vaultstats.css
@@ -4,7 +4,8 @@
 	flex-direction: row;
 	gap: 20px;
 	width: 100%;
-	margin: 10px;
+	height: 50%;
+	/* margin: 10px; */
 }
 
 .no-reward-wrapper{
@@ -12,6 +13,8 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 5px;
+	width: 33%;
+	aspect-ratio: 1/1;
 	border: 1px solid grey;
 	box-shadow: 0px 0px 5px 3px grey;
 }
