--- a/src/components/mythicrun/mythicrun.css
+++ b/src/components/mythicrun/mythicrun.css
@@ -1,3 +1,7 @@
+body{
+margin: 0;
+}
+
 .mythicwrapper{
 	display: flex;
 	flex-direction: column;
@@ -43,8 +47,16 @@
 }
 
 .vault-stats{
-	/* width: 40%; */
 	height: 20%;
+}
+
+.singlerunwrap{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-left: 0;
+	margin: 5px;
 }
 
 
