--- a/src/components/mythicrun/singlerun.css
+++ b/src/components/mythicrun/singlerun.css
@@ -2,9 +2,9 @@
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row;
-	border: 3px solid gray;
-	/* background-color: gray; */
 	width: 100%;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 .deets{
